# dt-demo

./: .gitignore  README.md  compose.yml  docker-bake.hcl  justfile  pyproject.toml  traefik.yml
configs/: .isort.cfg  ruff.toml
dt-demo-api/: Dockerfile  README.md  gen_secrets.sh  pyproject.toml
dt-demo-api/src/dt_demo_api/: __init__.py  app.py
dt-demo-auth/: README.md  pyproject.toml
dt-demo-auth/src/dt_demo_auth/: __init__.py  config.py  constants.py  db.py  helpers.py  models.py  router.py
dt-demo-frontend/: Dockerfile  README.md  flatten-html.sh  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
dt-demo-frontend/src/auth/: checkAccessToken.ts  config.ts  doLogin.ts  getNewToken.ts
dt-demo-frontend/src/common/: MyAppFooter.tsx  MyAppHeader.tsx
dt-demo-frontend/src/homepage/: Home.tsx  homepageApp.tsx  index.html
dt-demo-frontend/src/login/: Login.tsx  login.html  loginApp.tsx
